Generate `flink-conf.yaml` file automatically to set optimum conf values (#874)
* Generate flink-conf.yaml file automatically to set optimum conf values

* upgraded streaming dockerfile jdk version to 17

* upgraded e2e tests dockerfile jdk version to 17

* upgraded e2e tests dockerfile python version

* review comments

* review comments